# msi-ec-modern

./: .gitignore  CMakeLists.txt  README.md  constants.h  msi-ec.c  msi_modern_15_a11m_ec.hexpat  reload.sh
cmake/: FindKernelHeaders.cmake
